# gijimemo

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.json  settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: issuer.rs  llm.rs  meeting.rs  mod.rs  settings.rs
src/components/: ActionItems.tsx  AgendaCard.tsx  InsertZone.tsx  IssuerModal.tsx  TitleBar.tsx
src/pages/: EditorPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/store/: appStore.ts  editorStore.ts  settingsStore.ts
src/utils/: nanoid.ts
