[package]
name = "gijimemo"
version = "0.1.0"
description = "議事メモ - シンプル議事録 & LLM要約デスクトップアプリ"
authors = []
edition = "2021"

[lib]
name = "gijimemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
